--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 asyncio==3.4.3
+motu_datastore_client==0.1.1
 python-osc==1.9.0
 zeroconf==0.133.0
