--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,6 +23,6 @@ jobs:
           pip install -U -r requirements-dev.txt
       - name: Run tests with pytest
         run: |
-          pytest --cache-clear --cov=motu_server > pytest-coverage.txt
+          pytest --cache-clear --cov=motu_osc_bridge > pytest-coverage.txt
       - name: Comment Coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
